se agrega reset.css y se inicia la estructura html

--- a/index.html
+++ b/index.html
@@ -5,19 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/css/reset.css">
   <title>Frontend Mentor | Clipboard landing page</title>
 
 </head>
 <body>
+  <main class="container">
+    <header class="header">
+      <figure class="img-logo">
+        <img src="/images/logo.svg" alt="logo">
+      </figure>
 
-  A history of everything you copy
+      <h1 class="title">
+        A history of everything you copy
+      </h1>
+      <p class="txt-title">
+        Clipboard allows you to track and organize everything you 
+        copy. Instantly access your clipboard on all your devices.
+      </p>
 
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
+      <div class="btn-container">
+        <button class="btn-ios">Download for iOS</button>
+        <button class="btn-mac">Download for Mac</button>
+      </div>
 
-  Download for iOS
-  Download for Mac
+    </header>
+  </main>
+
+  
+
+  
+
+  
+  
 
   Keep track of your snippets
 
