estructura html finalizada

--- a/index.html
+++ b/index.html
@@ -30,73 +30,102 @@
       </div>
 
     </header>
+
+    <section class="keep-track">
+      <h2 class="sub-title">
+        Keep track of your snippets
+      </h2>
+      <p class="sub-text">
+        Clipboard instantly stores any item you copy in the cloud, 
+        meaning you can access your snippets immediately on all your 
+        devices. Our Mac and iOS apps will help you organize everything.
+      </p>
+
+      <figure class="img-computer">
+        <img src="/images/image-computer.png" alt="computer">
+      </figure>
+
+      <div class="quick-search">
+        <h3>Quick Search</h3>
+        <p>Easily search your snippets by content, category, web address, application, and more.</p>
+      </div>
+      <div class="icloud-sync">
+        <h3>iCloud Sync</h3>
+        <p>Instantly saves and syncs snippets across all your devices.</p>
+      </div>
+      <div class="complete-history">
+        <h3>Complete History</h3>
+        <p>Retrieve any snippets from the first moment you started using the app.</p>
+      </div>
+    </section>
+
+    <section class="access-clipboard">
+      <h2>Access Clipboard anywhere</h2>
+      <p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
+         snippets in a few simple clicks.
+      </p>
+      <figure class="img-devices">
+        <img src="/images/image-devices.png" alt="devices">
+      </figure>      
+    </section>
+
+    <section class="supercharge">
+      <h2>Supercharge your workflow</h2>
+      <p>We’ve got the tools to boost your productivity.</p>
+      <div class="create-blacklist">
+        <h4>Create blacklists</h4>
+        <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+      </div>
+      <div class="plain-text">
+        <h4>Plain text snippets</h4>
+        <p>Remove unwanted formatting from copied text for a consistent look.</p>
+      </div>
+      <div class="snake-preview">
+        <h4>Sneak preview</h4>
+        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+      </div>
+      <figure class="logos-partners">
+        <img src="/images/logo-google.png" alt="google">
+        <img src="/images/logo-ibm.png" alt="ibm">
+        <img src="/images/logo-microsoft.png" alt="microsoft">
+        <img src="/images/logo-hp.png" alt="hp">
+        <img src="/images/logo-vector-graphics.png" alt="vector graphics">
+      </figure>
+    </section>
+
+    <section class="clipboard">
+      <h3>Clipboard for iOS and Mac OS</h3>
+      <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+         and you’re ready to start adding to your clipboard.</p>
+      <div class="btn-container">
+        <button class="btn-ios">Download for iOS</button>
+        <button class="btn-mac">Download for Mac</button>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <figure class="logo-footer">
+        <img src="/images/logo.svg" alt="logo">
+      </figure>
+      <div class="container-footer">
+        <p>
+          FAQs <br>
+          Contact Us
+        </p>
+        <p>
+          Privacy Policy <br>
+          Press Kit
+        </p>
+        <p>Install Guide</p>
+      </div>
+      <figure class="social">
+        <img src="/images/icon-facebook.svg" alt="facebook">
+        <img src="/images/icon-twitter.svg" alt="twitter">
+        <img src="/images/icon-instagram.svg" alt="instagram">
+      </figure>
+    </footer>
+
   </main>
 
-  
-
-  
-
-  
-  
-
-  Keep track of your snippets
-
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
-
-  Quick Search
-
-  Easily search your snippets by content, category, web address, application, and more.
-
-  iCloud Sync
-
-  Instantly saves and syncs snippets across all your devices.
-
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
-
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
