--- a/index.html
+++ b/index.html
@@ -79,19 +79,25 @@
 
     <section class="supercharge">
       <h2>Supercharge your workflow</h2>
-      <p>We’ve got the tools to boost your productivity.</p>
-      <div class="create-blacklist">
-        <h4>Create blacklists</h4>
-        <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        <p>We’ve got the tools to boost your productivity.</p>
+      <div class="content-box">        
+        <div class="create-blacklist">
+          <img src="/images/icon-blacklist.svg" alt="blacklists">
+          <h4>Create blacklists</h4>
+          <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </div>
+        <div class="plain-text">
+          <img src="/images/icon-text.svg" alt="text">
+          <h4>Plain text snippets</h4>
+          <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+        <div class="snake-preview">
+          <img src="/images/icon-preview.svg" alt="preview">
+          <h4>Sneak preview</h4>
+          <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>        
       </div>
-      <div class="plain-text">
-        <h4>Plain text snippets</h4>
-        <p>Remove unwanted formatting from copied text for a consistent look.</p>
-      </div>
-      <div class="snake-preview">
-        <h4>Sneak preview</h4>
-        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
-      </div>
+
       <figure class="logos-partners">
         <img src="/images/logo-google.png" alt="google">
         <img src="/images/logo-ibm.png" alt="ibm">
