--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/estilos.css">
+  <link rel="icon" type=".image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/estilos.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
   <main class="container">
     <header class="header">
       <figure class="img-logo">
-        <img src="/images/logo.svg" alt="logo">
+        <img src="./images/logo.svg" alt="logo">
       </figure>
 
       <h1 class="title">
@@ -46,7 +46,7 @@
       </p>
       <div class="img-datos">
         <figure class="img-computer">
-          <img src="/images/image-computer.png" alt="computer">
+          <img src="./images/image-computer.png" alt="computer">
         </figure>
         <div class="content-text">
             <div class="quick-search">
@@ -73,7 +73,7 @@
          snippets in a few simple clicks.
       </p>
       <figure class="img-devices">
-        <img src="/images/image-devices.png" alt="devices">
+        <img src="./images/image-devices.png" alt="devices">
       </figure>      
     </section>
 
@@ -82,28 +82,28 @@
         <p>We’ve got the tools to boost your productivity.</p>
       <div class="content-box">        
         <div class="create-blacklist">
-          <img src="/images/icon-blacklist.svg" alt="blacklists">
+          <img src="./images/icon-blacklist.svg" alt="blacklists">
           <h4>Create blacklists</h4>
           <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
         </div>
         <div class="plain-text">
-          <img src="/images/icon-text.svg" alt="text">
+          <img src="./images/icon-text.svg" alt="text">
           <h4>Plain text snippets</h4>
           <p>Remove unwanted formatting from copied text for a consistent look.</p>
         </div>
         <div class="snake-preview">
-          <img src="/images/icon-preview.svg" alt="preview">
+          <img src="./images/icon-preview.svg" alt="preview">
           <h4>Sneak preview</h4>
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
         </div>        
       </div>
 
       <figure class="logos-partners">
-        <img src="/images/logo-google.png" alt="google">
-        <img src="/images/logo-ibm.png" alt="ibm">
-        <img src="/images/logo-microsoft.png" alt="microsoft">
-        <img src="/images/logo-hp.png" alt="hp">
-        <img src="/images/logo-vector-graphics.png" alt="vector graphics">
+        <img src="./images/logo-google.png" alt="google">
+        <img src="./images/logo-ibm.png" alt="ibm">
+        <img src="./images/logo-microsoft.png" alt="microsoft">
+        <img src="./images/logo-hp.png" alt="hp">
+        <img src="./images/logo-vector-graphics.png" alt="vector graphics">
       </figure>
     </section>
 
@@ -119,7 +119,7 @@
 
     <footer class="footer">
       <figure class="logo-footer">
-        <img src="/images/logo.svg" alt="logo">
+        <img src="./images/logo.svg" alt="logo">
       </figure>
       <div class="container-footer">
         <p>
@@ -133,9 +133,9 @@
         <p>Install Guide</p>
       </div>
       <figure class="social">
-        <img src="/images/icon-facebook.svg" alt="facebook">
-        <img src="/images/icon-twitter.svg" alt="twitter">
-        <img src="/images/icon-instagram.svg" alt="instagram">
+        <img src="./images/icon-facebook.svg" alt="facebook">
+        <img src="./images/icon-twitter.svg" alt="twitter">
+        <img src="./images/icon-instagram.svg" alt="instagram">
       </figure>
     </footer>
 
